cleanup sonar and exception logging